syntax = "proto3";

package io.github.vinicreis.dht.core.model.response;

import "io/github/vinicreis/dht/core/model/result.proto";

message JoinResponse {
  Result result = 1;
}
